[project]
name = "backend"
version = "0.1.0"
description = "Leaf cloud backend"
authors = [{ name = "Bernhard Boser", email = "bernhard.e.boser@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"

dependencies = ["pydantic>=2.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.3",
    "jupyterlab>=4.1.5",
    "mpkernel @ file:///Users/boser/Dropbox/iot/mpkernel",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5.post1",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eventbus"]
